--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --doctest-modules hippiepug tests
+addopts = -sv --doctest-modules hippiepug tests
 doctest_optionflags = ALLOW_BYTES IGNORE_EXCEPTION_DETAIL
