Try to get coveralls working in tox

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,10 @@
 envlist = py27, py35
 
 [testenv]
-commands = pytest -sv
-deps = 
-    pytest
+passenv = TRAVIS TRAVIS_*
+deps =
+    coveralls
+commands =
+    coverage run --source=hippiepug setup.py test 
+    coveralls 
+
