--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = py27, py35
+envlist = py27, py34, py35, py36
 
 [testenv]
 passenv = TRAVIS TRAVIS_*
 deps =
     coveralls
 commands =
-    coverage run --source=hippiepug setup.py test 
-    coveralls 
+    coverage run --source=hippiepug setup.py test
+    coveralls
 
