--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ celerybeat-schedule
 
 # dotenv
 .env
+.envrc
 
 # virtualenv
 venv/
@@ -88,4 +89,3 @@ ENV/
 
 # Rope project settings
 .ropeproject
-
